--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-client-preset": "^1.0.3",
     "flow-bin": "^0.46.0",
-    "graphql": "^0.9.6",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
     "react": "^15.5.4",
-    "react-apollo": "^1.2.0",
+    "react-apollo": "^2.0.1",
     "react-dom": "^15.5.4",
     "serve": "^5.1.5"
   },
